# kura

./: Cargo.toml  thoughts.md
kura-lexer/: Cargo.toml
kura-lexer/src/: error.rs  lib.rs
kura-lexer/src/snapshots/: kura_lexer__tests__lexing_builtin_identifiers.snap  kura_lexer__tests__lexing_numericals.snap  kura_lexer__tests__lexing_punctuations.snap  kura_lexer__tests__lexing_simple_codeblock.snap  rmb_lexer__tests__lexing_builtin_identifiers.snap  rmb_lexer__tests__lexing_numericals.snap  rmb_lexer__tests__lexing_punctuations.snap  rmb_lexer__tests__lexing_simple_codeblock.snap
kura-lexer/src/token/: kind.rs  token.rs
kura-parser/: Cargo.toml
kura-parser/src/: expression.rs  lib.rs
kura-parser/src/snapshots/: kura_parser__expression__tests__if_as_variable_value.snap  kura_parser__expression__tests__if_statement.snap  kura_parser__expression__tests__immutable_constant.snap  kura_parser__expression__tests__mutable_variable.snap  kura_parser__expression__tests__simple_math.snap  kura_parser__tests__function_declaration.snap  kura_parser__tests__language_features.snap  rmb_parser__expression__tests__if_statement.snap  rmb_parser__expression__tests__immutable_constant.snap  rmb_parser__tests__function_declaration.snap  (+1 more)
kura-repl/: Cargo.toml
kura-repl/src/: main.rs
kura-typer/: Cargo.toml
kura-typer/src/: lib.rs
lexer/: Cargo.toml
lexer/src/: lib.rs  token.rs
parser/: Cargo.toml
parser/src/: lib.rs
rmb-lexer/: Cargo.toml
rmb-lexer/src/: lib.rs  token.rs
rmb-parser/: Cargo.toml
rmb-parser/src/: expression.rs  lib.rs
(+31 files in other folders)
